syntax = "proto3";

package finance;

option go_package = "grpc/proto/pb";
import "common.proto";

// discount service start
service DiscountService{
  rpc GetAllInformationDiscount(GetInformationDiscountRequest) returns(GetInformationDiscountResponse);
  rpc CreateDiscount(AbsDiscountRequest) returns(common.AbsResponse);
  rpc DeleteDiscount(AbsDiscountRequest) returns(common.AbsResponse);
}
message AbsDiscountRequest{
  string groupId = 1;
  string studentId = 2;
  string discountPrice = 3;
  string comment = 4;
}
message GetInformationDiscountRequest{
  string groupId = 1;
}
message GetInformationDiscountResponse{
  repeated AbsStudentDiscount discounts = 1;
}
message AbsStudentDiscount{
  string studentId = 1;
  string studentName = 2;
  string studentPhoneNumber = 3;
  string discount = 4;
  string cause = 5;
}